--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "moment": "^2.30.1",
     "next": "14.1.3",
     "punycode.js": "^2.3.1",
     "react": "^18",
