--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "punycode.js": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
